--- a/pom.xml
+++ b/pom.xml
@@ -43,8 +43,8 @@
         <connection>scm:git:https://git-wip-us.apache.org/repos/asf/incubator-rocketmq.git</connection>
         <developerConnection>scm:git:https://git-wip-us.apache.org/repos/asf/incubator-rocketmq.git
         </developerConnection>
-      <tag>HEAD</tag>
-  </scm>
+        <tag>HEAD</tag>
+    </scm>
 
     <mailingLists>
         <mailingList>
@@ -69,71 +69,10 @@
 
     <developers>
         <developer>
-            <id>vintagewang</id>
-            <name>vintagewang</name>
-            <roles>
-                <role>architect</role>
-                <role>committer</role>
-            </roles>
-            <email>vintagewang@apache.org</email>
-            <timezone>+8</timezone>
+            <id>Apache RocketMQ</id>
+            <name>Apache RocketMQ of ASF</name>
+            <url>https://rocketmq.apache.org/</url>
         </developer>
-        <developer>
-            <id>vongosling@apache.org</id>
-            <name>vongosling@apache.org</name>
-            <roles>
-                <role>architect</role>
-                <role>committer</role>
-            </roles>
-            <email>vongosling@apache.org</email>
-            <timezone>+8</timezone>
-        </developer>
-        <developer>
-            <id>yukon</id>
-            <name>Xinyu Zhou</name>
-            <email>yukon@@apache.org</email>
-            <roles>
-                <role>committer</role>
-            </roles>
-            <timezone>+8</timezone>
-        </developer>
-        <developer>
-            <id>stevenschew</id>
-            <name>Wei Zhou</name>
-            <email>stevenschew@@apache.org</email>
-            <roles>
-                <role>committer</role>
-            </roles>
-            <timezone>+8</timezone>
-        </developer>
-        <developer>
-            <id>lollipop</id>
-            <name>Jixiang Jin</name>
-            <email>lollipop@apache.org</email>
-            <roles>
-                <role>committer</role>
-            </roles>
-            <timezone>+8</timezone>
-        </developer>
-        <developer>
-            <id>lizhanhui</id>
-            <name>Zhanhui Li</name>
-            <email>lizhanhui@apache.org</email>
-            <roles>
-                <role>committer</role>
-            </roles>
-            <timezone>+8</timezone>
-        </developer>
-        <developer>
-            <id>dongeforever</id>
-            <name>dongeforever</name>
-            <email>dongeforever@apache.org</email>
-            <roles>
-                <role>committer</role>
-            </roles>
-            <timezone>+8</timezone>
-        </developer>
-
     </developers>
 
     <licenses>
