On default, servers first try to use OpenSSL then JDK SSL provider if the previous is not available.
Client side is forced to use JDK SSL provider to maintain maximum compatibility.

--- a/remoting/pom.xml
+++ b/remoting/pom.xml
@@ -48,10 +48,9 @@
 
         <dependency>
             <groupId>io.netty</groupId>
-            <artifactId>netty-tcnative-boringssl-static</artifactId>
-            <version>2.0.0.Final</version>
+            <artifactId>netty-tcnative</artifactId>
+            <version>1.1.33.Fork22</version>
             <classifier>${os.detected.classifier}</classifier>
-            <optional>true</optional>
         </dependency>
     </dependencies>
 
