fix logger appender unit test too long with mock

--- a/logappender/src/test/resources/log4j-example.properties
+++ b/logappender/src/test/resources/log4j-example.properties
@@ -32,7 +32,7 @@ log4j.appender.store.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-4r [%t] 
 log4j.appender.mq=org.apache.rocketmq.logappender.log4j.RocketmqLog4jAppender
 log4j.appender.mq.Tag=log
 log4j.appender.mq.Topic=TopicTest
-log4j.appender.mq.ProducerGroup=log4jp
+log4j.appender.mq.ProducerGroup=loggerAppender
 log4j.appender.mq.NameServerAddress=127.0.0.1:9876
 log4j.appender.mq.layout=org.apache.log4j.PatternLayout
 log4j.appender.mq.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-4r [%t] (%F:%L) %-5p - %m%n
