--- a/store/pom.xml
+++ b/store/pom.xml
@@ -46,5 +46,10 @@
             <artifactId>logback-core</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>artemis-native</artifactId>
+            <version>2.4.0</version>
+        </dependency>
     </dependencies>
 </project>
