--- a/pom.xml
+++ b/pom.xml
@@ -252,7 +252,7 @@
                         <exclude>.travis.yml</exclude>
                         <exclude>CONTRIBUTING.md</exclude>
                         <exclude>bin/README.md</exclude>
-                        <exclude>PULL_REQUEST_TEMPLATE.md</exclude>
+                        <exclude>.github/*</exclude>
                         <exclude>src/test/resources/certs/*</exclude>
                     </excludes>
                 </configuration>
