fix pom for nameserver and broker

--- a/namesrv/pom.xml
+++ b/namesrv/pom.xml
@@ -48,5 +48,9 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
     </dependencies>
 </project>
