Make code compatible to OMS 0.3.0

--- a/pom.xml
+++ b/pom.xml
@@ -592,7 +592,7 @@
             <dependency>
                 <groupId>io.openmessaging</groupId>
                 <artifactId>openmessaging-api</artifactId>
-                <version>0.1.0-alpha</version>
+                <version>0.3.0-alpha-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>log4j</groupId>
