Explicitly specify repository from oss.sonatype.org as snapshot artifacts are deployed over there

--- a/pom.xml
+++ b/pom.xml
@@ -606,4 +606,11 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <repositories>
+        <repository>
+            <id>snapshot@oss.sonatype.org</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+        </repository>
+    </repositories>
 </project>
