--- a/pom.xml
+++ b/pom.xml
@@ -254,6 +254,7 @@
                         <exclude>bin/README.md</exclude>
                         <exclude>.github/*</exclude>
                         <exclude>src/test/resources/certs/*</exclude>
+                        <exclude>src/test/resources/META-INF/service/*</exclude>
                         <exclude>*/target/**</exclude>
                         <exclude>*/*.iml</exclude>
                     </excludes>
