--- a/pom.xml
+++ b/pom.xml
@@ -125,7 +125,6 @@
         <module>distribution</module>
         <module>openmessaging</module>
         <module>logging</module>
-        <module>rocketmq-http</module>
     </modules>
 
     <build>
@@ -215,9 +214,9 @@
                     <execution>
                         <id>generate-effective-dependencies-pom</id>
                         <phase>generate-resources</phase>
-                        <!-- <goals>
+                        <goals>
                             <goal>effective-pom</goal>
-                        </goals> -->
+                        </goals>
                         <configuration>
                             <output>${project.build.directory}/effective-pom/effective-dependencies.xml</output>
                         </configuration>
