--- a/acl-plug/pom.xml
+++ b/acl-plug/pom.xml
@@ -28,6 +28,11 @@
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>rocketmq-remoting</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>rocketmq-logging</artifactId>
         </dependency>
         <dependency>
