--- a/acl-plug/pom.xml
+++ b/acl-plug/pom.xml
@@ -18,7 +18,7 @@
         <artifactId>rocketmq-all</artifactId>
         <version>4.4.0-SNAPSHOT</version>
     </parent>
-    <artifactId>rocketmq-acl-plug</artifactId>
+    <artifactId>rocketmq-acl</artifactId>
     <name>rocketmq-acl-plug ${project.version}</name>
 
     <url>http://maven.apache.org</url>
