--- a/distribution/conf/transport.yml
+++ b/distribution/conf/transport.yml
@@ -14,20 +14,20 @@
 #  limitations under the License.
 
 onlyNetAddress:
-  netaddress: 192.168.0.*
+  remoteAddr: 192.168.0.*
   noPermitPullTopic:
     - broker-a
 
 list:
   - account: RocketMQ
-    password: 1234567
-    netaddress: 192.168.0.*
+    signature: 1234567
+    remoteAddr: 192.168.0.*
     permitSendTopic:
       - TopicTest
       - test2
   - account: RocketMQ
-    password: 1234567
-    netaddress: 192.168.2.1
+    signature: 1234567
+    remoteAddr: 192.168.2.1
     permitSendTopic:
       - test3
       - test4
