exclude docs folder when running apache-rat-plugin

--- a/pom.xml
+++ b/pom.xml
@@ -259,6 +259,7 @@
                         <exclude>src/test/resources/META-INF/service/*</exclude>
                         <exclude>*/target/**</exclude>
                         <exclude>*/*.iml</exclude>
+                        <exclude>docs/**</exclude>
                     </excludes>
                 </configuration>
             </plugin>
