--- a/pom.xml
+++ b/pom.xml
@@ -633,6 +633,21 @@
                 <artifactId>commons-codec</artifactId>
                 <version>1.9</version>
             </dependency>
+            <dependency>
+                <groupId>io.prometheus</groupId>
+                <artifactId>simpleclient</artifactId>
+                <version>0.6.0</version>
+            </dependency>
+            <dependency>
+                <groupId>io.prometheus</groupId>
+                <artifactId>simpleclient_httpserver</artifactId>
+                <version>0.6.0</version>
+            </dependency>
+            <dependency>
+                <groupId>io.prometheus</groupId>
+                <artifactId>simpleclient_hotspot</artifactId>
+                <version>0.6.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
