completing qos=0 message pub and sub

--- a/pom.xml
+++ b/pom.xml
@@ -648,6 +648,11 @@
                 <artifactId>simpleclient_hotspot</artifactId>
                 <version>0.6.0</version>
             </dependency>
+            <dependency>
+                <groupId>org.eclipse.paho</groupId>
+                <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+                <version>1.2.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
