1.add mqttServerConfig/mqttClientConfig 2.delete payload from RemotingCommand

--- a/pom.xml
+++ b/pom.xml
@@ -653,6 +653,11 @@
                 <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
                 <version>1.2.0</version>
             </dependency>
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>LATEST</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
