--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,7 @@
     </issueManagement>
 
     <properties>
+        <checkstyle.skip>true</checkstyle.skip>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
